Hotfix for yt errors Fixed exception when exception is too long